--- a/axioms.tex
+++ b/axioms.tex
@@ -4,13 +4,14 @@
 
 \chapter{Axioms}\label{c.axioms}
 
-Each axiom states that a \emph{fold} exists that will place given points and lines onto points and lines, such that certain properties hold. The term fold comes from the origami operation of folding a piece of paper, but here it is used to refer the geometric line that would be created by folding the paper.
+Each axiom states that a \emph{fold} exists that will place given points and lines onto points and lines, such that certain properties hold. The term fold comes from the origami operation of folding a piece of paper, but here it is used to refer to the geometric line that would be created by folding the paper.
 
-The axioms are called the \emph{Huzita-Hatori axioms} \cite{wiki:hh}, although their final form resulted from the work of several other mathematicians. Lee \cite[Chapter~4]{hwa} is a good overview of the mathematics of origami, while Martin \cite[Chapter~10]{martin} is a formal development. Formal definitions are given in \cite[Chapter~10]{martin}. The reader should be aware that, \emph{by definition}, folds result in \emph{reflections}. Given a point $p$, its reflection around a fold $l$ results in a point $p'$, such that $l$ is the perpendicular bisector of the line segment $\overline{pp'}$:
+The axioms are called the \emph{Huzita-Hatori axioms} \cite{wiki:hh}, although their final form resulted from the work of several mathematicians. Lee \cite[Chapter~4]{hwa} is a good overview of the mathematics of origami, while Martin \cite[Chapter~10]{martin} is a formal development. The reader should be aware that, \emph{by definition}, folds result in \emph{reflections}. Given a point $p$, its reflection around a fold $l$ results in a point $p'$, such that $l$ is the perpendicular bisector of the line segment $\overline{pp'}$:
 
-%\begin{figure}[H]
+\medskip
+
 \begin{center}
-\begin{tikzpicture}
+\begin{tikzpicture}[scale=1.3]
 \coordinate (P1) at (2,2);
 \coordinate (P1P) at (6,4);
 \coordinate (mid) at (4,3);
@@ -23,13 +24,14 @@ The axioms are called the \emph{Huzita-Hatori axioms} \cite{wiki:hh}, although t
 \draw[thick] (m2) -- +(-60:4pt);
 \draw[thick] (P1) -- (P1P);
 \draw[very thick,dashed] (4.7,1.6) -- node[very near end,right,yshift=4pt] {$l$} (3.5,4);
-\fill (P1) circle(2pt) node[above left] {$p$};
-\fill (P1P) circle(2pt) node[above left] {$p'$};
-\fill (mid) circle(2pt);% node[below,xshift=-2pt,yshift=-8pt] {$p_i$};
+\fill (P1) circle(1.2pt) node[above left] {$p$};
+\fill (P1P) circle(1.2pt) node[above left] {$p'$};
+\fill (mid) circle(1.2pt);% node[below,xshift=-2pt,yshift=-8pt] {$p_i$};
 \draw[very thick,dotted,->,bend right=50] (2,1.8) to (6,3.8);
 \end{tikzpicture}
 \end{center}
-%\end{figure}
+
+\medskip
 
 In the diagrams, given lines are solid, folds are dashed, auxiliary lines are dotted, and dotted arrows indicate the direction of folding the paper.
 
@@ -64,7 +66,7 @@ Given two distinct points $p_1=(x_1,y_1)$, $p_2=(x_2,y_2)$, there is a unique fo
 
 \textbf{Derivation of the equation of the fold}
 
-The equation of fold $l$ is derived from the coordinates of $p_1$ and $p_2$: the slope is the quotient of the differences of the coordinates and the intercept is derived from $p_1$:
+The equation of fold $l$ is derived from the coordinates of $p_1$ and $p_2$: the slope is the quotient of the differences of the coordinates and the $y$-intercept is derived from $p_1$:
 \begin{equation}
 y - y_1 = \disfrac{y_2-y_1}{x_2-x_1}(x-x_1)\,.
 \end{equation}
@@ -75,7 +77,7 @@ y - y_1 = \disfrac{y_2-y_1}{x_2-x_1}(x-x_1)\,.
 \textbf{Example}
 
 Let  $p_1=(2,2), p_2=(6,4)$. The equation of $l$ is:
-\begin{form}{2}
+\begin{form}{1.4}
 y-2&=&\disfrac{4-2}{6-2}(x-2)\\
 y&=&\disfrac{1}{2}x+1\,.
 \end{form}
@@ -104,10 +106,11 @@ Given two distinct points $p_1=(x_1,y_1)$, $p_2=(x_2,y_2)$, there is a unique fo
 \coordinate (mid1) at ($(P1)!.5!(P2)$);
 \coordinate (mid2) at ($(P1)!.5!(P2)+(-1,2)$);
 
-\draw[rotate=30] (mid1) rectangle +(8pt,8pt);
+\draw[rotate=29] (mid1) rectangle +(8pt,8pt);
 
 \draw[very thick,dotted] (P1) -- (P2);
-\draw[very thick,dashed] ($(mid1)!-1.4!(mid2)$) -- node[very near end,left,yshift=-12pt] {$l$} ($(mid1)!1.4!(mid2)$);
+\draw[very thick,dashed] ($(mid1)!-1.6!(mid2)$) --
+  node[very near end,left,yshift=-12pt] {$l$} ($(mid1)!1.4!(mid2)$);
 \fill (P1) circle(2pt) node[above left] {$p_1$};
 \fill (P2) circle(2pt) node[above left] {$p_2$};
 
@@ -126,7 +129,7 @@ y - \disfrac{y_1+y_2}{2} = -\disfrac{x_2-x_1}{y_2-y_1}\left(x-\disfrac{x_1+x_2}{
 \textbf{Example}
 
 Let $p_1=(2,2), p_2=(6,4)$. The equation of $l$ is:
-\begin{form}{2}
+\begin{form}{1.4}
 y-\left(\disfrac{2+4}{2}\right)&=&-\disfrac{6-2}{4-2}\left(x-\left(\disfrac{2+6}{2}\right)\right)\\
 y&=&-2x+11\,.
 \end{form}
@@ -152,12 +155,16 @@ Given two lines $l_1$ and $l_2$, there is a fold $l$ that places $l_1$ onto $l_2
   \node at (-.2,\y-.3) {\sm{\y}};
 \coordinate (L1a) at (2,2);
 \coordinate (L1b) at (4,6);
-\draw[thick] (L1a) -- node[very near start,right,yshift=-4pt] {$l_1$} (L1b);
-\draw[thick,dotted,name path=l1] ($(L1a)!-.75!(L1b)$) -- ($(L1a)!1.25!(L1b)$);
+\draw[very thick] (L1a) --
+  node[very near start,right,yshift=-4pt] {$l_1$} (L1b);
+\draw[thick,dotted,name path=l1] ($(L1a)!-.75!(L1b)$) --
+  ($(L1a)!1.25!(L1b)$);
 \coordinate (L2a) at (7,1);
 \coordinate (L2b) at (4,4);
-\draw[thick] (L2a) -- (L2b);
-\draw[thick,dotted,name path=l2] ($(L2a)!-.3!(L2b)$) -- node[very near start,above,xshift=4pt,yshift=2pt] {$l_2$} ($(L2a)!2!(L2b)$);
+\draw[very thick] (L2a) -- (L2b);
+\draw[thick,dotted,name path=l2] ($(L2a)!-.3!(L2b)$) --
+  node[very near start,above,xshift=-6pt,yshift=8pt] {$l_2$}
+  ($(L2a)!2!(L2b)$);
 \path [name intersections = {of = l1 and l2, by = {PM}}];
 \fill (PM) circle(2pt) node[below left,xshift=-9pt,yshift=-7pt] {$p_i$};
 
@@ -172,7 +179,9 @@ Given two lines $l_1$ and $l_2$, there is a fold $l$ that places $l_1$ onto $l_2
 
 \coordinate (B2a) at (3,6.73);
 \coordinate (B2b) at (4,.57);
-\draw[very thick,dashed] ($(B2a)!-.05!(B2b)$) -- node[very near end,right,xshift=4pt,yshift=6pt] {$l_{f_2}$} ($(B2a)!1.25!(B2b)$);
+\draw[very thick,dashed] ($(B2a)!-.05!(B2b)$) -- 
+  node[very near end,right,xshift=4pt,yshift=6pt] {$l_{f_2}$}
+  ($(B2a)!1.25!(B2b)$);
 
 \draw[very thick,dotted,->,bend right=50] (6,2.2) to (4.5,6.7);
 \draw[very thick,dotted,->,bend left=50] (6.2,1.6) to (1.8,1.3);
@@ -180,9 +189,8 @@ Given two lines $l_1$ and $l_2$, there is a fold $l$ that places $l_1$ onto $l_2
 \end{center}
 %\end{figure}
 
-\textbf{Derivation of the equation of the fold}
-
 If the lines are parallel, let $l_1$ be $y=mx+b_1$ and let $l_2$ be $y=mx+b_2$. The fold is the line parallel to $l_1,l_2$ and halfway between them $y=mx+\disfrac{b_1+b_2}{2}$.
+
 
 If the lines intersect, let $l_1$ be $y=m_1x+b_1$ and let $l_2$ be $y=m_2x+b_2$.
 
@@ -190,7 +198,7 @@ If the lines intersect, let $l_1$ be $y=m_1x+b_1$ and let $l_2$ be $y=m_2x+b_2$.
 
 $p_i=(x_i,y_i)$, the point of intersection of the two lines, is:
 \vspace{-2ex}
-\begin{form}{1.8}
+\begin{form}{1.3}
 m_1x_i+b_2&=&m_2x_i+b_2\\
 x_i &=& \disfrac{b_2-b_1}{m_1-m_2}\\
 y_i &=&m_1x_i+b_1\,.
@@ -200,22 +208,24 @@ y_i &=&m_1x_i+b_1\,.
 \textbf{Example}
  
 Let $l_1$ be $y=2x-2$ and let $l_2$ be $y=-x+8$. The point of intersection is:
-\begin{form}{2}
-x_i&=&\disfrac{8-(-2)}{2-(-1)}=\disfrac{10}{3}\approx 3.33\\
-y_i &=& 2\cdot\disfrac{10}{3}-2=\disfrac{14}{3}\approx 4.67\,.
+\begin{form}{1.4}
+x_i&=&\disfrac{8-(-2)}{2-(-1)}=\disfrac{10}{3}\\
+y_i &=& 2\cdot\disfrac{10}{3}-2=\disfrac{14}{3}\,.
 \end{form}
+
 \textbf{Derivation of the equation of the slope of the angle bisector}
 
 The two lines form an angle at their point of intersection, actually, two pairs of vertical angles. The folds are the bisectors of these angles.
 
 If the angle of line $l_1$ relative to the $x$-axis is $\theta_1$ and the angle of line $l_2$ relative to the $x$-axis is $\theta_2$, then the fold is the line which makes an angle of $\theta_b=\disfrac{\theta_1+\theta_2}{2}$ with the $x$-axis.
 
-$\tan\theta_1=m_1$ and $\tan\theta_2=m_2$ are given and $m_b$, the slope of the angle bisector, is:
+$\tan\theta_1=m_1$ and $\tan\theta_2=m_2$ are given so $m_b$, the slope of the angle bisector, is:
 \[
 m_b=\tan\theta_b=\tan\disfrac{\theta_1+\theta_2}{2}\,.
 \]
 The derivation requires the use of two trigonometric identities that we derive here:
-\begin{form}{1.3}
+\vspace{-2ex}
+\begin{form}{1.4}
 \tan (\theta_1+\theta_2) &=& \disfrac{\sin(\theta_1+\theta_2)}{\cos(\theta_1+\theta_2)}\\
 &=&\disfrac{\sin\theta_1\cos\theta_2+\cos\theta_1\sin\theta_2}{\cos\theta_1\cos\theta_2-\sin\theta_1\sin\theta_2}\\
 &=&\disfrac{\sin\theta_1+\cos\theta_1\tan\theta_2}{\cos\theta_1-\sin\theta_1\tan\theta_2}\\
@@ -223,11 +233,12 @@ The derivation requires the use of two trigonometric identities that we derive h
 \end{form}
 
 We use this formula to obtain a quadratic equation in $\tan(\theta/2)$:
-\begin{form}{1.3}
+\vspace{-3ex}
+\begin{form}{1.4}
 \tan \theta=\disfrac{\tan(\theta/2)+\tan(\theta/2)}{1-\tan^2(\theta/2)}\\
-\tan\theta \,(\tan(\theta/2))^2 \;+\; 2\,(\tan (\theta/2)) \;-\;\tan \theta = 0\,.
+\tan\theta \,(\tan(\theta/2))^2 \;+\; 2\,(\tan (\theta/2)) \;-\;\tan \theta = 0\,,
 \end{form}
-Its solutions are:
+whose solutions are:
 \[
 \tan(\theta/2) = \disfrac{-1\pm\sqrt{1+\tan^2\theta}}{\tan\theta}\,.
 \]
@@ -236,22 +247,24 @@ First derive $m_s$, the slope of $\theta_1+\theta_2$:
 m_s=\tan(\theta_1+\theta_2)= \disfrac{m_1+m_2}{1-m_1m_2}\,.
 \]
 Then derive $m_b$, the slope of the angle bisector:
-\begin{form}{1.3}
+\vspace{-2ex}
+\begin{form}{1.4}
 m_b&=& \tan\disfrac{\theta_1+\theta_2}{2}\\
 &=&\disfrac{-1\pm\sqrt{1+\tan^2(\theta_1+\theta_2)}}{\tan (\theta_1+\theta_2)}\\
 &=&\disfrac{-1\pm\sqrt{1+m_s^2}}{m_s}\,.
 \end{form}
 \textbf{Example}
+
 For the lines $y=2x-2$ and $y=-x+8$, the slope of the angle bisector is:
-\begin{form}{1.3}
+\begin{form}{1.4}
 m_s=\disfrac{2+(-1)}{1-(2 \cdot -1)}=\disfrac{1}{3}\\
-m_b=\disfrac{-1\pm\sqrt{1+(1/3)^2}}{1/3}=-3\pm \sqrt{10}\approx -6.16,\; 0.162\,.
+m_b=\disfrac{-1\pm\sqrt{1+(1/3)^2}}{1/3}=-3\pm \sqrt{10}\,.
 \end{form}
 
 \textbf{Derivation of the equation of the fold}
 
 Let us derive equation of the fold $l_{f_1}$ with the positive slope; we know the coordinates of the intersection of the two lines $m_i=\left(\disfrac{10}{3},\disfrac{14}{3}\right)$:
-\begin{form}{2}
+\begin{form}{1.3}
 \disfrac{14}{3} &=& (-3+\sqrt{10}) \cdot \disfrac{10}{3} + b\\ b&=&\disfrac{44-10\sqrt{10}}{3}\\
 y&=& (-3+\sqrt{10})x + \disfrac{44-10\sqrt{10}}{3}\approx 0.162x+4.13\,.
 \end{form}
@@ -291,7 +304,8 @@ Given a point $p_1$ and a line $l_1$, there is a unique fold $l$ perpendicular t
 \textbf{Derivation of the equation of the fold}
 
 Let $l_1$ be $y = m_1x + b_1$ and let $p_1=(x_1,y_1)$.  $l$ is perpendicular to $l_1$ so its slope is $-\disfrac{1}{m_1}$. Since it passes through $p_1$, we can compute the intercept $b$ and write down its equation:
-\begin{form}{2}
+\vspace{-2ex}
+\begin{form}{1.4}
 y_1=-\disfrac{1}{m} x_1 + b\\
 b= \disfrac{(my_1+x_1)}{m}\\
 y=-\disfrac{1}{m} x +\disfrac{(my_1+x_1)}{m}\,.
@@ -354,10 +368,11 @@ For a given pair of points and a line, there may be zero, one or two folds.
 
 \textbf{Derivation of the equations of the reflections}
 
-Let $l$ be a fold through $p_2$ and $p_1'$ be the reflection of $p_1$ around $l$. The length of $\overline{p_1p_2}$ equals the length of $\overline{p_2p_1}'$. The locus of points at distance $\overline{p_1p_2}$ \emph{from} $p_2$ is the circle centered at $p_2$ whose radius is the length of $\overline{p_1p_2}$. The intersections of this circle with the line $l_1$ give the possible points $p_1'$.
+Let $l$ be a fold through $p_2$ and $p_1'$ be the reflection of $p_1$ around $l$. The length of $\overline{p_1p_2}$ equals the length of $\overline{p_1'p_2}$. The locus of points at distance $\overline{p_1p_2}$ \emph{from} $p_2$ is the circle centered at $p_2$ whose radius is the length of $\overline{p_1p_2}$. The intersections of this circle with the line $l_1$ give the possible points $p_1'$.
 
 Let $l_1$ be $y=m_1x + b_1$ and let $p_1=(x_1,y_1)$, $p_2=(x_2,y_2)$. The equation of the circle centered at $p_2$ with radius the length of $\overline{p_1p_2}$ is:
-\begin{form}{1.5}
+\vspace{-2ex}
+\begin{form}{1.2}
 (x-x_2)^2 + (y-y_2)^2 = r^2\,,\quad \textrm{where}\\
 r^2= (x_2-x_1)^2 + (y_2-y_1)^2\,.
 \end{form}
@@ -378,15 +393,16 @@ Let $p_1=(2,8)$, $p_2=(4,4)$ and let $l_1$ be $y=-\disfrac{1}{2}x +3$. The equat
 (x-4)^2 + (y-4)^2 = r^2=(4-2)^2+(4-8)^2=20\,.
 \]
 Substitute the equation of the line into the equation of the circle and simplify to obtain a quadratic equation for the $x$-coordinates of the intersections (or use Equation~\ref{eq.intersections}):
-\begin{form}{1.5}
+\vspace{-2ex}
+\begin{form}{1.4}
 (x-4)^2 + \left(\left(-\disfrac{1}{2}x+3\right)-4\right)^2&=&20\\
-\disfrac{5}{4}x^2-7x-3 &=&0\\
+%\disfrac{5}{4}x^2-7x-3 &=&0\\
 5x^2 -28x -12&=&0\\
 (5x+2)(x-6)&=&0\,.
 \end{form}
 The two points of intersection are:
 \[
-p_1'=\left(-\disfrac{2}{5},\disfrac{16}{5}\right) = (-0.4,3.2)\,,\quad p_1''=(6,0)\,.
+p_1'=\left(-\disfrac{2}{5},\disfrac{16}{5}\right) = (-0.4,3.2)\,,\quad\quad p_1''=(6,0)\,.
 \]
 
 \textbf{Derivation of the equations of the folds}
@@ -400,13 +416,15 @@ y - \disfrac{y_1+y_1'}{2} = -\disfrac{x_1'-x_1}{y_1'-y_1}\left(x-\disfrac{x_1+x_
 
 
 For $p_1=(2,8)$ and $p_1'=\left(-\disfrac{2}{5},\disfrac{16}{5}\right)$, the equation of the fold $l_{f_1}$  is:
-\begin{form}{2}
+\vspace{-2ex}
+\begin{form}{1.4}
 y-\disfrac{8+(16/5)}{2}&=&-\disfrac{(-2/5)-2}{(16/5)-8}\left(x-\disfrac{2+\left(-2/5\right)}{2}\right)\\
 y&=&-\disfrac{1}{2}x+6\,.
 \end{form}
 
 For $p_1=(2,8)$ and $p_1''=(6,0)$, the equation of the fold $l_{f_2}$ is:
-\begin{form}{2}
+\vspace{-2ex}
+\begin{form}{1.4}
 y-\disfrac{8+0}{2}&=&-\disfrac{6-2}{0-8}\left(x-\disfrac{2+6}{2}\right)\\
 y&=&\disfrac{1}{2}x+2\,.
 \end{form}
@@ -468,13 +486,11 @@ Given two points $p_1$ and $p_2$ and two lines $l_1$ and $l_2$, there is a fold 
 
 For a given pair of points and pair of lines, there may be zero, one, two or three folds.
 
-A fold that places $p_i$ onto $l_i$ is a line such that the distance from $p_i$ to the line is equal to the distance from $l_i$ to the line. The locus of points that are equidistant from a point $p_i$ and a line $l_i$ is a parabola with focus $p_i$ and directrix $l_i$. A fold is any line tangent to that parabola. A detailed justification of this claim is given below.
+If a fold places $p_i$ onto $l_i$, the distance from $p_i$ to the fold is equal to the distance from $l_i$ to the fold. The locus of points that are equidistant from a point $p_i$ and a line $l_i$ is a parabola with focus $p_i$ and directrix $l_i$. A fold is any line tangent to that parabola. A detailed justification of this claim is given below.
 
 For a fold to simultaneously place $p_1$ onto $l_1$ and $p_2$ onto $l_2$, it must be a tangent common to the two parabolas.
 
-The formula for an arbitrary parabola is quite complex, so we limit the presentation to parabolas with the the $y$-axis as the axis of symmetry. This is not a significant limitation because for any parabola there is a rigid motion that moves the parabola so that its axis of symmetry is the $y$-axis.
-
-An example will also be given where one of the parabolas has the $x$-axis as its axis of symmetry.
+The formula for an arbitrary parabola is quite complex, so we limit the presentation to parabolas with the the $y$-axis as the axis of symmetry. This is not a significant limitation because for any parabola there is a rigid motion that moves the parabola so that its axis of symmetry is the $y$-axis. An example will also be given where one of the parabolas has the $x$-axis as its axis of symmetry.
 
 \newpage
 
@@ -482,35 +498,48 @@ An example will also be given where one of the parabolas has the $x$-axis as its
 
 Let $(0,f)$ be the focus of a parabola with directrix $y=d$. Define $p=f-d$, the signed length of the line segment between the focus and the directrix.\footnote{We have been using the notation $p_i$ for points; the use of $p$ here might be confusing but it is the standard notation. The formal name for $p$ is one-half the \emph{latus rectum}.} If the vertex of the parabola is on the $x$-axis, the equation of the parabola is $y=\disfrac{x^2}{2p}$. To move the parabola up or down the $y$-axis so that its vertex is at $(0,h)$, add $h$ to the equation of the parabola: $y=\disfrac{x^2}{2p}+h$.
 \begin{center}
-\begin{tikzpicture}[scale=1]
-\draw (-6,0) -- node[very near start,below,xshift=-32pt] {$x$-\textsf{axis}}(6,0);
-\draw (0,-3) -- node[very near start,right,yshift=-20pt] {$y$-\textsf{axis}}(0,4.5);
-\draw[very thick] (-6,-2) -- node[near start,below] {\textsf{directrix} $\quad y=-2$} (6,-2);
-\draw[domain=-5:5,samples=50,very thick,dotted] plot (\x,{\x*\x/8+1});
+\begin{tikzpicture}
+\draw (-6,0) --
+  node[very near start,below,xshift=-32pt] {$x$-\textsf{axis}} (6,0);
+\draw (0,-3) --
+  node[very near start,right,yshift=-20pt] {$y$-\textsf{axis}} (0,4.5);
+\draw[very thick] (-6,-2) --
+  node[near start,below]  
+  {\textsf{directrix} $\quad y=d$ \textsf{is} $y=-2$} (6,-2);
+\draw[domain=-5:5,samples=50,very thick,dotted]
+  plot (\x,{\x*\x/8+1});
 \coordinate (F) at (0,4);
-\fill (F) circle (2pt) node[left,xshift=-2pt,yshift=0pt] {$(0,f)=(0,4)$} node[above left,xshift=-2pt,yshift=4pt] {\textsf{focus}};
+\fill (F) circle (2pt)
+  node[left,xshift=-2pt,yshift=0pt] {$(0,f)\textsf{\ is\ }(0,4)$}
+  node[above left,xshift=-2pt,yshift=4pt] {\textsf{focus}};
 \fill (0,-2) circle (2pt);
-\fill (0,1) circle (2pt) node[below left] {\textsf{vertex}} node[below left,yshift=-10pt] {$(0,1)$};
-\draw[<->] (2,-1.9) -- node[fill=white] {$p=6$} +(0,5.8);
-\draw[<->] (1,.1) -- node[fill=white] {$h=1$} +(0,.8);
+\fill (0,1) circle (2pt)
+  node[below left] {\textsf{vertex}}
+  node[below left,yshift=-10pt] {$(0,1)$};
+\draw[<->] (2,-1.9) --
+  node[fill=white,xshift=4pt] {$p=6$} +(0,5.8);
+\draw[<->] (1,.1) --
+  node[fill=white] {$h=1$} +(0,.8);
 \end{tikzpicture}
 \end{center}
 Define $a=2ph$ so that the equation of the parabola is:
-\begin{form}{1.5}
+\vspace{-2ex}
+\begin{form}{1.2}
 y=\disfrac{x^2}{2p}+\disfrac{a}{2p}\\
 x^2-2py+a=0\,.
 \end{form}
 The equation of the parabola in the diagram above is:
-\begin{form}{1}
+\begin{form}{.9}
 x^2-2\cdot 6\,y + 2\cdot 6 \cdot 1=0\\
 x^2-12y +12=0\,.
 \end{form}
 Substitute the equation of an \emph{arbitrary} line $y=mx+b$ into the equation for the parabola to obtain an equation for the points of intersection of the line and the parabola:
-\begin{form}{1.5}
+\vspace{-2ex}
+\begin{form}{1}
 x^2-2p(mx+b)+a=0\\
 x^2+(-2mp)x+(-2pb+a)=0\,.
 \end{form}
-The line will be tangent to the parabola iff this quadratic equation has \emph{exactly one} solution iff its discriminant is zero:
+The line will be a \emph{tangent} to the parabola \emph{if and only if} this quadratic equation has \emph{exactly one} solution \emph{if and only if} its discriminant is zero:
 \[
 (-2mp)^2\:-\:4\cdot 1\cdot (-2pb+a)=0\,,
 \]
@@ -519,7 +548,7 @@ which simplifies to:
 m^2p^2+2pb-a=0\,.\label{eq.disc}
 \end{equation}
 
-This is the equation with variable $m$ for the slopes of tangents to the parabola. There are an infinite number of tangents because for each $m$, there is some $b$ that makes the line a tangent by moving it up or down.\footnote{Except of course for a line parallel to the axis of symmetry.}
+This is the quadratic equation with variable $m$ for the slopes of tangents to the parabola. There are an infinite number of tangents because for each $m$, there is some $b$ that makes the line a tangent by moving it up or down.\footnote{Except of course for a line parallel to the axis of symmetry.}
 
 To obtain the common tangents to both parabolas, the equations for the two parabolas have two unknowns and can be solved for $m$ and $b$.
 
@@ -541,11 +570,12 @@ Parabola 2: focus $(0,-4)$, directrix $y=-2$, vertex $(0,-3)$, $p=-2$, $a=2\cdot
 x^2-2\cdot (-2)y+12=0\,.
 \]
 Substituting into Equation~\ref{eq.disc} and simplifying:
-\[
-m^2-b-3=0\,.
-\]
+\begin{equation}
+m^2-b-3=0\,.\label{eq.parabola1}
+\end{equation}
 The solutions of the two equations:
-\begin{form}{1.5}
+\vspace{-3ex}
+\begin{form}{1}
 m^2+b-3=0\\
 m^2-b-3=0\,,
 \end{form}
@@ -566,8 +596,9 @@ Substituting into Equation~\ref{eq.disc} and simplifying:
 \[
 2m^2-b-4=0\,.
 \]
-The solutions of the two equations:
-\begin{form}{1.5}
+The solutions of the two equations (using Equation~\ref{eq.parabola1} for the first parabola):
+\vspace{-2ex}
+\begin{form}{1}
 m^2+b-3=0\\
 2m^2-b-4=0\,,
 \end{form}
@@ -588,20 +619,23 @@ Parabola 2: focus $(4,0)$, directrix $x=2$, vertex $(3,0)$, $p=2$, $a=2\cdot 2\c
 \[
 y^2-4x+12 = 0\,.
 \]
-Note that this is an equation with $x$ and $y^2$ instead of $x^2$ and $y$, so we can't use Equation~\ref{eq.disc} and we must perform the derivation again.
+This is an equation with $y^2$ and $x$ instead of $x^2$ and $y$, so we can't use Equation~\ref{eq.disc} and we must perform the derivation again.
 
 Substitute the equation for a line:
-\begin{form}{1.5}
+\vspace{-2ex}
+\begin{form}{1}
 (mx+b)^2-4x+12=0\\
 m^2x^2+(2mb-4)x+(b^2+12)=0\,,
 \end{form}
 set the discriminant equal to zero and simplify:
-\begin{form}{1.5}
+\vspace{-2ex}
+\begin{form}{1}
 (2mb-4)^2\:-\:4m^2(b^2+12)=0\\
 -3m^2-mb+1=0\,.
 \end{form}
-If we try to solve the two equations:
-\begin{form}{1.5}
+If we try to solve the two equations (using Equation~\ref{eq.parabola1} for the first parabola):
+\vspace{-2ex}
+\begin{form}{1}
 m^2+b-3=0\\
 -3m^2-mb+1=0\,,
 \end{form}
@@ -621,7 +655,8 @@ y=0.27x+2.93\,.
 \]
 
 From the form of Equation~\ref{eq.cubic}, we might guess that $1$ or $-1$ is a solution:
-\begin{form}{1.4}
+\vspace{-2ex}
+\begin{form}{1}
 1^3-3\cdot 1^2-3\cdot 1+1=-4\\
 (-1)^3-3\cdot (-1)^2-3\cdot(-1)+1=0\,.
 \end{form}
@@ -630,37 +665,37 @@ Divide Equation~\ref{eq.cubic} by $m-(-1)=m+1$ to obtain the quadratic equation 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\bigskip
-
 \textbf{Derivation of the equations of the reflections}
 
 We derive the position of the reflection $p_1'=(x_1',y_1')$ of $p_1=(x_1,y_1)$ around some tangent line $l_t$ whose equation is $y=m_tx+b_t$. The derivation is identical for any tangent and for $p_2$.
 
-To reflect $p_1$ around $l_t$, we find the line $l_p$ with equation $y=m_px+b_p$ that is perpendicular to $l_t$ and passes through $p_1$;
-\begin{form}{2}
+To reflect $p_1$ around $l_t$, we find the line $l_p$ with equation $y=m_px+b_p$ that is perpendicular to $l_t$ and passes through $p_1$:
+\vspace{-2ex}
+\begin{form}{1.2}
 y=-\disfrac{1}{m_t}x+b_p\\
 y_1=-\disfrac{1}{m_t}x_1+b_p\\
 y=\disfrac{-x}{m_t}+\left(y_1+\disfrac{x_1}{m_t}\right)\,.
 \end{form}
+
 Next we find the intersection $p_t=(x_t,y_t)$ of $l_t$ and $l_p$:
-\begin{form}{3}
+\vspace{-3ex}
+\begin{form}{1.7}
 m_tx_t+b_t=\disfrac{-x_t}{m_t}+\left(y_1+\disfrac{x_1}{m_t}\right)\\
 x_t=\disfrac{\left(y_1+\disfrac{x_1}{m_t}-b_t\right)}{\left(m_t+\disfrac{1}{m_t}\right)}\\
 y_t=m_tx_t+b_t\,.
 \end{form}
 The reflection $p_1'$ is easy to derive because the intersection $p_t$ is the midpoint between $p_1$ and its reflection $p_1'$:
-\begin{form}{2}
+\vspace{-2ex}
+\begin{form}{1.3}
 x_t=\disfrac{x_1+x_1'}{2}\,,\quad y_t=\disfrac{y_1+y_1'}{2}\\
 x_1'=2x_t-x_1\,,\quad y_1'=2y_t-y_1\,.
 \end{form}
 
-\newpage
-
 \textbf{Example}
 
 $p_1=(0,4)$, $l_1$ is $y=\sqrt{3}x$:
-
-\begin{form}{2.2}
+\vspace{-2ex}
+\begin{form}{1.3}
 x_t=\disfrac{\left(4+\disfrac{0}{\sqrt{3}}-0\right)}{\left(\sqrt{3}+\disfrac{1}{\sqrt{3}}\right)}=\sqrt{3}\\
 y_t=\sqrt{3}\sqrt{3}+0=3\\
 x_1'=2x_t-x_1=2\sqrt{3}-0=2\sqrt{3}\approx 3.46\\
@@ -728,7 +763,7 @@ The following diagram shows the focus---the large dot at $p=(0,f)$, and the dire
 
 \newpage
 
-We have selected five points $p_i$, $i=1,\ldots,5$ on the parabola. Each point $p_i$ is at a distance of $a_i$ from both the focus and from the directrix. Drop a perpendicular from $p_1$ to the directrix and let $p'$ be the intersection of the perpendicular and the directrix. Since $p_1$ is on the parabola, $\overline{p'p_1}=\overline{p_1p}=a_1$. We claim that the tangent $l$ to the parabola at $p_1$ (dashed line) is a fold that reflects $p$ onto $p'$.
+We have selected five points $p_i$, $i=1,\ldots,5$ on the parabola. Each point $p_i$ is at a distance of $a_i$ from both the focus and from the directrix. Drop a perpendicular from $p_1$ to the directrix and let $p'$ be its intersection with the directrix. Since $p_1$ is on the parabola, $\overline{p'p_1}=\overline{p_1p}=a_1$. We claim that the tangent $l$ to the parabola at $p_1$ (dashed line) is a fold that reflects $p$ onto $p'$.
 
 We have to prove the $l$ is the perpendicular bisector of $\overline{pp'}$. Let us extract a simplified diagram:
 \begin{center}
@@ -771,7 +806,7 @@ We have to prove the $l$ is the perpendicular bisector of $\overline{pp'}$. Let 
 \item The right triangles $\triangle qrp'$ and $\triangle p_2rp$ have one acute angle equal and one side equal so they are congruent. Therefore, $\overline{p'r}=\overline{rp}$ and $\overline{p_1r}$ is the median of $\triangle pp_1p'$.
 \item $p_1$ is on the parabola so $\overline{pp_1}=\overline{p_1p'}$. Therefore, $\triangle pp_1p'$ is an isoceles triangle.
 \item In the isoceles triangle $\triangle pp_1p'$, the median $\overline{p_1r}$ is also the perpendicular bisector of $\overline{pp'}$.
-\item $l$ is a fold that contains the line segment $\overline{p_1r}$.
+\item Therefore, $l$ is a fold because it contains the line segment $\overline{p_1r}$.
 \end{itemize}
 
 
@@ -837,33 +872,34 @@ $l_p$ passes through $p_1$ so $y_1=m_2x_1+b_p$ and its equation is:
 y=m_2x+(y_1-m_2x_1)\,.
 \]
 $p_1'=(x_1',y_1')$, the reflection  of $p_1$ around the fold $l$, is the intersection of $l_1$ and $l_p$:
-\begin{form}{1.5}
+\vspace{-2ex}
+\begin{form}{1.2}
 m_1x_1'+b_1=m_2x_1'+(y_1-m_2x_1)\\
 x_1'=\disfrac{y_1-m_2x_1-b_1}{m_1-m_2}\\
 y_1'=m_1x_i'+b_1\,.
 \end{form}
-The midpoint $p_m=(x_m,y_m)$ of $l_p$ is on the fold $l$:
+The midpoint $p_m=(x_m,y_m)$ of $l_p$ between $p_1$ and $p_1'$ is on the fold $l$:
 \[
 (x_m,y_m)=\left(\disfrac{x_1+x_1'}{2},\disfrac{y_1+y_1'}{2}\right)\,.
 \]
 The equation of the fold $l$ is the perpendicular bisector of $\overline{p_1p_1'}$. First compute the intercept of $l$ which passes through $p_m$:
-\begin{form}{2}
+\vspace{-2ex}
+\begin{form}{1.3}
 y_m=-\disfrac{1}{m_2}x_m+b_m\\
 b_m=y_m+\disfrac{x_m}{m_2}\,.
 \end{form}
 The equation of the fold $l$ is:
-\begin{form}{2}
+\[
 y=-\disfrac{1}{m_2}x+\left(y_m+\disfrac{x_m}{m_2}\right)\,.
-\end{form}
+\]
 
-\vspace*{-3ex}
+\vspace*{-1ex}
 
 \textbf{Example}
 
 Let $p_1=(5,3)$, let $l_1$ be $y=3x-3$ and let $l_2$ be $y=-x+11$.
- 
-
-\begin{form}{2.4}
+\vspace{-2ex}
+\begin{form}{1.3}
 x_1'=\disfrac{3-(-1)\cdot 5-(-3)}{3-(-1)}=\disfrac{11}{4}\\
 y_1'=3\cdot \disfrac{11}{4} + (-3)=\disfrac{21}{4}\\
 	p_m=\left(\disfrac{5+\disfrac{11}{4}}{2},\disfrac{3+\disfrac{21}{4}}{2}\right)=\left(\disfrac{31}{8},\disfrac{33}{8}\right)\,.
