--- a/trisect-an-angle.tex
+++ b/trisect-an-angle.tex
@@ -2,7 +2,7 @@
 
 \chapter{How to Trisect an Angle (With a Little Help from a Friend)}\label{c.trisect}
 
-It is well known that it is impossible to trisect an arbitrary angle using a compass and a straightedge. The reason is that trisection requires the construction of cube roots, but the compass and straightedge can only construct lengths that are expressions built from the four arithmetic operators and square roots.
+The reason is that it is impossible to trisect an arbitrary angle is that it requires the construction of cube roots, but the compass and straightedge can only construct lengths that are expressions built from the four arithmetic operators and square roots.
 
 Greek mathematicians discovered that if other instruments are allowed, angles can be trisected \cite{wiki:tri}. Section~\ref{s.neusis} presents a construction of Archimedes using a simple instrument called a \emph{neusis} \cite{wiki:neu}. Section~\ref{s.q} shows a more complex construction of Hippias using the \emph{quadratrix} \cite{wiki:quad}. As a bonus, Section~\ref{s.square} shows that the quadratrix can square a circle.
 
@@ -10,7 +10,7 @@ Greek mathematicians discovered that if other instruments are allowed, angles ca
 
 \section{Trisection using the neusis}\label{s.neusis}
 
-In geometry textbooks, constructions are performed using a ``straightedge'' and a compass. The term straightedge is used instead of ``ruler'' because a straightedge has no marks on it. The only operation it can perform is to construct a straight line between two points, while a ruler can measure distances. To trisect an angle all we need is a straightedge with two marks that are a fixed distance apart, called a \emph{neusis}. We define the distance between the marks as $1$:
+The term straightedge is used instead of ``ruler'' because a straightedge has no marks on it. The only operation it can perform is to construct a straight line between two points, while a ruler can measure distances. To trisect an angle all we need is a straightedge with two marks that are a fixed distance apart, called a \emph{neusis}. We define the distance between the marks as $1$:
 \begin{center}
 \begin{tikzpicture}[scale=3.5]
 \draw (-1,1.05) rectangle +(3.2,.1);
@@ -20,7 +20,7 @@ In geometry textbooks, constructions are performed using a ``straightedge'' and 
 \end{tikzpicture}
 \end{center}
 
-Let $\alpha$ be an arbitrary angle $\angle ABE$ within a circle with center $B$ and radius $1$. The circle can be constructed by setting the compass to the distance between the marks on the neusis. Extend the radius $EB$ beyond the circle. Place an edge of the neusis on $A$ and move it until it intersects the extension of $EB$ at $D$ and the circle at $C$, using the marks so that the length of the line segment $CD$ is $1$. Draw the line $AD$:
+Let $\alpha$ be an arbitrary angle $\angle ABE$ within a circle with center $B$ and radius $1$. The circle can be constructed by setting the compass to the distance between the marks on the neusis. Extend the radius $\overline{EB}$ beyond the circle. Place an edge of the neusis on $A$ and move it until it intersects the extension of $\overline{EB}$ at $D$ and the circle at $C$, using the marks so that the length of the line segment $\overline{CD}$ is $1$. Draw the line $\overline{AD}$:
 
 \begin{center}
 \begin{tikzpicture}[scale=2.5]
@@ -46,7 +46,7 @@ Let $\alpha$ be an arbitrary angle $\angle ABE$ within a circle with center $B$ 
 
 \newpage
 
-Draw line $BC$ and label the angles and line segments as shown:
+Draw line $\overline{BC}$ and label the angles and line segments as shown:
 
 \begin{center}
 \begin{tikzpicture}[scale=2.5]
@@ -61,7 +61,7 @@ Draw line $BC$ and label the angles and line segments as shown:
 \fill (a) circle [radius=.5pt];
 \fill (d) circle [radius=.5pt];
 \fill (c) circle [radius=.5pt];
-\fill (-1,0) circle [radius=.5pt];
+\fill (-1,0) circle [radius=.5pt] node[left] {$E$};
 \path (c) -- node[fill=white] {$1$} (d);
 %\begin{scope}[rotate=-20]
 %\draw (-1,1.05) rectangle +(3.2,.1);
@@ -72,7 +72,7 @@ Draw line $BC$ and label the angles and line segments as shown:
 \end{tikzpicture}
 \end{center}
 
-Both $\triangle ABC$ and $\triangle BCD$ are isoceles: $AB=BC$ since both are radii and $BC=CD$ by construction using the neusis. A computation (using the facts that the angles of a triangle and supplemenary angles add up to $180$ radians) shows that $\beta$ trisects $\alpha$:
+Both $\triangle ABC$ and $\triangle BCD$ are isoceles: $\overline{AB} = \overline{BC}$ since both are radii and $\overline{BC} = \overline{CD}$ by construction using the neusis. A computation (using the facts that the angles of a triangle and supplemenary angles add up to $\pi$ radians) shows that $\beta$ trisects $\alpha$:
 \erh{1pt}
 \begin{equationarray*}{rcl}
 \epsilon &=& \pi - 2\beta\\
@@ -89,7 +89,7 @@ Both $\triangle ABC$ and $\triangle BCD$ are isoceles: $AB=BC$ since both are ra
 
 \section{Trisection using the quadratrix}\label{s.q}
 
-The following diagram shows a \emph{quadratrix compass}: two (unmarked) straightedges connected by a joint that constrains them to move together. One straightedge moves parallel to the $x$-axis from $DC$ to $AB$, while the second straightedge is allowed to rotate around the origin at $A$ until it lies horizontally along $AB$. The curve traced by the joint of the two straightedges is called the \emph{quadratrix curve} or simply the \emph{quadratrix}.
+The following diagram shows a \emph{quadratrix compass}: two (unmarked) straightedges connected by a joint that constrains them to move together. One straightedge moves parallel to the $x$-axis from $\overline{DC}$ to $\overline{AB}$, while the second straightedge is allowed to rotate around the origin at $A$ until it lies horizontally along $\overline{AB}$. The curve traced by the joint of the two straightedges is called the \emph{quadratrix curve} or simply the \emph{quadratrix}.
 
 \begin{center}
 \begin{tikzpicture}[scale=.7,domain=.03:1.555,samples=100]
@@ -142,7 +142,7 @@ As the horizontal straightedge is moved down at a constant velocity, the other s
 
 \vspace{-2ex}
 
-$P_1$ is the intersection of the line defining the angle $\alpha$ with the quadratrix. This point has $y$-coordinate $1-t$, where $t$ is the distance that the horizontal straightedge has moved from its initial position $DC$. Now trisect the \emph{line segment} $DE$ to obtain point $F$. (It is easy to trisect a line segment using Thales theorem.) Let $P_2$ be the intersection of a line from $F$ parallel to $DC$ and the quadratrix. By the equality of the velocities, we have:
+$P_1$ is the intersection of the line defining the angle $\alpha$ relative to $\overline{DC}$ and the quadratrix. This point has $y$-coordinate $1-t$, where $t$ is the distance that the horizontal straightedge has moved from its initial position $\overline{DC}$. Now trisect the \emph{line segment} $\overline{DE}$ to obtain point $F$. (It is easy to trisect a line segment using Thales theorem.) Let $P_2$ be the intersection of a line from $F$ parallel to $\overline{DC}$ and the quadratrix. By the equality of the velocities, we have:
 
 \vspace{-2ex}
 
@@ -177,7 +177,7 @@ $P_1$ is the intersection of the line defining the angle $\alpha$ with the quadr
 \end{tikzpicture}
 \end{center}
 
-Suppose that the horizontal straightedge has moved $t$ down the $y$-axis to point $E$ and the rotating straightedge forms an angle of $\theta$ with the $x$-axis. $P$ is the intersection of the quadratrix with the horizontal straightedge, and $F$ is the projection of $P$ on the $x$-axis. What are the coordinates of quadratrix at $P$? Clearly, $y=PF=EA=1-t$. On the quadratrix, $\theta$ decreases at the same rate that $t$ increases:
+Suppose that the horizontal straightedge has moved $t$ down the $y$-axis to point $E$ and the rotating straightedge forms an angle of $\theta$ with the $x$-axis. $P$ is the intersection of the quadratrix and the horizontal straightedge, and $F$ is the projection of $P$ on the $x$-axis. What are the coordinates of $P$? Clearly, $y=\overline{PF}=\overline{EA}=1-t$. On the quadratrix, $\theta$ decreases at the same rate that $t$ increases:
 \erh{0pt}
 \begin{equationarray*}{rcl}
 \frac{1-t}{1} &=& \frac{\theta}{\pi/2}\\
@@ -194,7 +194,9 @@ which gives:
 \[
 x = \frac{y}{\tan\theta}=y\cot\theta=y\cot \frac{\pi}{2}(1-t)=y\cot \frac{\pi}{2}y\,.
 \]
-We usually express a function as $y=f(x)$ but it can also be expressed as $x=f(y)$. Let us compute the $x$-coordinate of the point $G$, the intersection of the quadratrix with the $x$-axis. We can't simply plug in $y=0$ because $\cot 0$ is not defined, but we might get lucky by computing the limit of $x$ as $y$ goes to $0$:
+We usually express a function as $y=f(x)$ but it can also be expressed as $x=f(y)$. 
+
+As the horizontal straightedge moves down, it will merge with $\overline{AB}$ and $P$ with lie on a point on the $x$-axis, which we denote $G$. Let us compute the $x$-coordinate of the point $G$. We can't simply plug in $y=0$ because $\cot 0$ is not defined, but we might get lucky by computing the limit of $x$ as $y$ goes to $0$. First, multiply and divide by $\pi/2$:
 \[
 x = y\cot \frac{\pi}{2}y = \frac{2}{\pi}\cdot \frac{\pi}{2}y\cot \frac{\pi}{2}y\,.
 \]
@@ -207,6 +209,7 @@ Therefore, as $y\rightarrow 0$:
 \[
 x \rightarrow \frac{2}{\pi}\cdot \lim_{y\rightarrow 0}\frac{\pi}{2}y\cot \frac{\pi}{2}y = \frac{2}{\pi}\cdot 1 = \frac{2}{\pi}\,.
 \]
-Using the quadratrix we have constructed a line segment $AG$ whose length is $x=\displaystyle\frac{2}{\pi}$. With an ordinary straightedge and compass it is easy to construct a line segment of length $\sqrt{\disfrac{2}{x}}=\sqrt{\pi}$ and then construct a square whose area is $\pi$.
+Using the quadratrix we have constructed a line segment $\overline{AG}$ whose length is $x=\displaystyle\frac{2}{\pi}$. With an ordinary straightedge and compass it is easy to construct a line segment of length
+$\sqrt{\disfrac{2}{x}}=\sqrt{\disfrac{2}{2/\pi}}=\sqrt{\pi}$ and then construct a square whose area is $\pi$.
 
 
