--- a/lill.tex
+++ b/lill.tex
@@ -79,7 +79,7 @@ In Sections~\ref{s.multiple}--\ref{s.noroots} we continue the initial example to
 
 \section{Multiple roots}\label{s.multiple}
 
-Let us continue the example above. The polynomial $p(x)=a_3x^3+6x^2+11x+6$ has three roots $-1,-2,-3$. Computing the arc tangent of the negation of the roots gives:
+Let us continue the example above. The polynomial $p(x)=x^3+6x^2+11x+6$ has three roots $-1,-2,-3$. Computing the arc tangent of the negation of the roots gives:
 \[
 \alpha=-\tan^{-1} (-1) = 45^\circ,\quad \beta=-\tan^{-1}(-2) = 63.4^\circ,\quad \gamma=-\tan^{-1} (-3)= 71.6^\circ\,.
 \]
